src/test/ui/issues/issue-42344.stderr
error[E0389]: cannot borrow data mutably in a `&` reference
  --> $DIR/issue-42344.rs:4:5
   |
LL |     TAB[0].iter_mut();
   |     ^^^^^^ assignment into an immutable reference

error: aborting due to previous error

For more information about this error, try `rustc --explain E0389`.
